force-app/main/default/objects/Project_Level_Parameter__c/Project_Level_Parameter__c.object-meta.xml
<CustomObject>
    <customHelpPage>NCMT_HelpPage</customHelpPage>
    <description>NCMT Project Level Parameters

parametric cost estimating is a technique used in planning, budgeting, and performance stages of the acquisition process. The technique is used to expedite the development of cost estimates when discrete estimating techniques would require inordinate amounts of time and resources and would produce similar results. The concept includes the use of Cost-Estimating-Relationships (CER&apos;s) such as those defined in the varied Unit Cost Studies of which the models in the PCPG are based. Parametric techniques focus on the cost drivers, not the miscellaneous details.</description>
    <label>Project Level Parameter</label>
    <nameField>
        <displayFormat>PLP-{00000}</displayFormat>
        <label>Project Level Parameter</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Level Parameters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>