force-app/main/default/objects/Project_Level_Parameter__c/fields/Add_MailRoom_XRay__c.field-meta.xml
<CustomField>
    <fullName>Add_MailRoom_XRay__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Security Parameters</description>
    <label>Mail Screening Change MailRoom XRay</label>
    <type>Checkbox</type>
</CustomField>