force-app/main/default/objects/Project_Level_Parameter__c/fields/Add_Visitor_Access_Control__c.field-meta.xml
<CustomField>
    <fullName>Add_Visitor_Access_Control__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Entry Screeing ChangeVisitor Access Ctrl</label>
    <type>Checkbox</type>
</CustomField>