force-app/main/default/objects/Project_Level_Parameter__c/fields/Additional_Primary_Circulation_Stair__c.field-meta.xml
<CustomField>
    <fullName>Additional_Primary_Circulation_Stair__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Additional Primary Circulation Stair</label>
    <precision>5</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>