force-app/main/default/objects/Project_Level_Parameter__c/fields/Addnl_Primary_Circulation_Stair_Flights__c.field-meta.xml
<CustomField>
    <fullName>Addnl_Primary_Circulation_Stair_Flights__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Addnl Primary Circulation Stair Flights</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>