force-app/main/default/objects/Project_Level_Parameter__c/fields/Adj_LOP_Setback__c.field-meta.xml
<CustomField>
    <fullName>Adj_LOP_Setback__c</fullName>
    <description>Adj LOP Setback</description>
    <label>Use Adj LOP Setback FT</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>