force-app/main/default/objects/Project_Level_Parameter__c/fields/Atrium_Area_SF__c.field-meta.xml
<CustomField>
    <fullName>Atrium_Area_SF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Coming from HousingPlan</description>
    <label>Atrium Area SF</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>