force-app/main/default/objects/Project_Level_Parameter__c/fields/Atrium_Height_Stories__c.field-meta.xml
<CustomField>
    <fullName>Atrium_Height_Stories__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Atrium Height Stories</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>