force-app/main/default/objects/Project_Level_Parameter__c/fields/Atrium_Phantom_Floors__c.field-meta.xml
<CustomField>
    <fullName>Atrium_Phantom_Floors__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Atrium Phantom Floors</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>