force-app/main/default/objects/Project_Level_Parameter__c/fields/Average_Bay_Area_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Average_Bay_Area_Calculated__c</fullName>
    <formula>Typical_Bay_Size_A__c * Typical_Bay_Size_B__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Bay Area(Calculated)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>