force-app/main/default/objects/Project_Level_Parameter__c/fields/Average_Cladding_Cost_del1__c.field-meta.xml
<CustomField>
    <fullName>Average_Cladding_Cost_del1__c</fullName>
    <formula>NCMT_Project__r.Average_Cladding_Cost_del__c/ Finished_Wall_Area_SF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Cladding Cost(/SF of Skin)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>