force-app/main/default/objects/Project_Level_Parameter__c/fields/Average_Roofing_Cost_DirectCost_SFRo_del__c.field-meta.xml
<CustomField>
    <fullName>Average_Roofing_Cost_DirectCost_SFRo_del__c</fullName>
    <formula>NCMT_Project__r.Average_Roofing_Cost_del__c/ Total_Roof_Area_SF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Roofing Cost(/SF of Roof)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>