force-app/main/default/objects/Project_Level_Parameter__c/fields/Average_Story_Height__c.field-meta.xml
<CustomField>
    <fullName>Average_Story_Height__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Average Story Height</description>
    <label>Average Story Height</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>