force-app/main/default/objects/Project_Level_Parameter__c/fields/Average_Typical_Bay_Area__c.field-meta.xml
<CustomField>
    <fullName>Average_Typical_Bay_Area__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Average Typical Bay Area</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>