force-app/main/default/objects/Project_Level_Parameter__c/fields/Balance__c.field-meta.xml
<CustomField>
    <fullName>Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Balance</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>