force-app/main/default/objects/Project_Level_Parameter__c/fields/Basement1_SF__c.field-meta.xml
<CustomField>
    <fullName>Basement1_SF__c</fullName>
    <defaultValue>0</defaultValue>
    <description>From PLP trigger</description>
    <label>Basement1 SF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>