force-app/main/default/objects/Project_Level_Parameter__c/fields/Basement_Roof_SF__c.field-meta.xml
<CustomField>
    <fullName>Basement_Roof_SF__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Basement Roof SF</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>