force-app/main/default/objects/Project_Level_Parameter__c/fields/Basement_Story_Height__c.field-meta.xml
<CustomField>
    <fullName>Basement_Story_Height__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Basement Story Height</description>
    <label>Basement Story Height</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>