force-app/main/default/objects/Project_Level_Parameter__c/fields/Below_Ground__c.field-meta.xml
<CustomField>
    <fullName>Below_Ground__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Below Ground Each</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>