force-app/main/default/objects/Project_Level_Parameter__c/fields/BGFloors__c.field-meta.xml
<CustomField>
    <fullName>BGFloors__c</fullName>
    <formula>IF((TEXT(NCMT_Project__r.Project_type__c)  == &apos;New Construction&apos; &amp;&amp; TEXT(NCMT_Project__r.Building_Type__c)  != &apos;Parking Garage&apos;),NCMT_Project__r.Total_GSF__c/( NCMT_Project__r.Above_Ground__c + NCMT_Project__r.Below_Ground__c),IF((TEXT(NCMT_Project__r.Project_type__c)  == &apos;Repair &amp; Alteration - Parametric Entry&apos; || TEXT(NCMT_Project__r.Project_type__c)  == &apos;Repair &amp; Alteration - Work Item Detail&apos;),NCMT_Project__r.Gross_Area_Including_Parking__c/( NCMT_Project__r.Above_Ground__c + NCMT_Project__r.Below_Ground__c),0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BGFloors</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>