force-app/main/default/objects/Project_Level_Parameter__c/fields/BGSF_Atrium_SF__c.field-meta.xml
<CustomField>
    <fullName>BGSF_Atrium_SF__c</fullName>
    <defaultValue>0</defaultValue>
    <label>BGSF_Atrium_SF</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>