force-app/main/default/objects/Project_Level_Parameter__c/fields/Building_Parameter__c.field-meta.xml
<CustomField>
    <fullName>Building_Parameter__c</fullName>
    <formula>NCMT_Project__r.Building_Parameter__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building Parameter</label>
    <type>Text</type>
</CustomField>