force-app/main/default/objects/Project_Level_Parameter__c/fields/Change_Setback_100__c.field-meta.xml
<CustomField>
    <fullName>Change_Setback_100__c</fullName>
    <description>Default Value comes from System Level Parameters</description>
    <label>Use Change Setback(100%) FT</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>