force-app/main/default/objects/Project_Level_Parameter__c/fields/Character__c.field-meta.xml
<CustomField>
    <fullName>Character__c</fullName>
    <label>Character</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Historic</fullName>
            </value>
            <value>
                <fullName>Architectural</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Speculative</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>