force-app/main/default/objects/Project_Level_Parameter__c/fields/Cladding_Code__c.field-meta.xml
<CustomField>
    <fullName>Cladding_Code__c</fullName>
    <label>Cladding Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>