force-app/main/default/objects/Project_Level_Parameter__c/fields/Cladding_Override_Comments__c.field-meta.xml
<CustomField>
    <fullName>Cladding_Override_Comments__c</fullName>
    <label>Cladding Override Comments</label>
    <type>TextArea</type>
</CustomField>