force-app/main/default/objects/Project_Level_Parameter__c/fields/Cladding_Override_Percent__c.field-meta.xml
<CustomField>
    <fullName>Cladding_Override_Percent__c</fullName>
    <label>Cladding Override Percent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>25%</fullName>
            </value>
            <value>
                <fullName>20%</fullName>
            </value>
            <value>
                <fullName>15%</fullName>
            </value>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>5%</fullName>
            </value>
            <value>
                <fullName>0%</fullName>
            </value>
            <value>
                <fullName>-5%</fullName>
            </value>
            <value>
                <fullName>-10%</fullName>
            </value>
            <value>
                <fullName>-15%</fullName>
            </value>
            <value>
                <fullName>-20%</fullName>
            </value>
            <value>
                <fullName>-25%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>