force-app/main/default/objects/Project_Level_Parameter__c/fields/Cladding_Quality__c.field-meta.xml
<CustomField>
    <fullName>Cladding_Quality__c</fullName>
    <label>Cladding Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Very High</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Mid-Level</fullName>
            </value>
            <value>
                <fullName>Basic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>