force-app/main/default/objects/Project_Level_Parameter__c/fields/Cladding_Retaining_Wall__c.field-meta.xml
<CustomField>
    <fullName>Cladding_Retaining_Wall__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Cladding Retaining Wall</description>
    <label>Cladding Retaining Wall</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>