force-app/main/default/objects/Project_Level_Parameter__c/fields/Cladding_Retaining_Wall_SF__c.field-meta.xml
<CustomField>
    <fullName>Cladding_Retaining_Wall_SF__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Cladding Retaining Wall SF</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>