force-app/main/default/objects/Project_Level_Parameter__c/fields/Cladding_Skin_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Cladding_Skin_Ratio__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Cladding-Skin Ratio</description>
    <label>Cladding-Skin Ratio</label>
    <precision>4</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>