force-app/main/default/objects/Project_Level_Parameter__c/fields/Cladding_Type__c.field-meta.xml
<CustomField>
    <fullName>Cladding_Type__c</fullName>
    <label>Cladding Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stone</fullName>
            </value>
            <value>
                <fullName>Stone/Precast</fullName>
            </value>
            <value>
                <fullName>Precast</fullName>
            </value>
            <value>
                <fullName>Curtain Wall</fullName>
            </value>
            <value>
                <fullName>Metal Panel</fullName>
            </value>
            <value>
                <fullName>Brick</fullName>
            </value>
            <value>
                <fullName>Stucco</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>