force-app/main/default/objects/Project_Level_Parameter__c/fields/Cladding_Type_Quality__c.field-meta.xml
<CustomField>
    <fullName>Cladding_Type_Quality__c</fullName>
    <formula>IF( NCMT_Project__r.Utilitarian__c == True, 1, IF( NCMT_Project__r.Medium__c == True, 2, IF( NCMT_Project__r.High__c == True, 3,0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cladding Type/Quality</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>