force-app/main/default/objects/Project_Level_Parameter__c/fields/Comments_Fire_Protection__c.field-meta.xml
<CustomField>
    <fullName>Comments_Fire_Protection__c</fullName>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>