force-app/main/default/objects/Project_Level_Parameter__c/fields/Comments_Structural_Frame__c.field-meta.xml
<CustomField>
    <fullName>Comments_Structural_Frame__c</fullName>
    <label>Comments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>