force-app/main/default/objects/Project_Level_Parameter__c/fields/Controls__c.field-meta.xml
<CustomField>
    <fullName>Controls__c</fullName>
    <label>Controls</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>