force-app/main/default/objects/Project_Level_Parameter__c/fields/Core_Shell_Partition_LF__c.field-meta.xml
<CustomField>
    <fullName>Core_Shell_Partition_LF__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Core Shell Partition LF</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>