force-app/main/default/objects/Project_Level_Parameter__c/fields/Curtain_Wall_Percentage_SF__c.field-meta.xml
<CustomField>
    <fullName>Curtain_Wall_Percentage_SF__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Curtain Wall Percentage SF</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>