force-app/main/default/objects/Project_Level_Parameter__c/fields/Curtain_Wall_Percentage_Total_Window__c.field-meta.xml
<CustomField>
    <fullName>Curtain_Wall_Percentage_Total_Window__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Formula from PLP trigger</description>
    <label>Curtain Wall Percentage (Total Window)</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>