force-app/main/default/objects/Project_Level_Parameter__c/fields/Dead_Load__c.field-meta.xml
<CustomField>
    <fullName>Dead_Load__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Dead Load</description>
    <label>Dead Load</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>