force-app/main/default/objects/Project_Level_Parameter__c/fields/Def_Blast_Resistance_ProgressiveCollapse__c.field-meta.xml
<CustomField>
    <fullName>Def_Blast_Resistance_ProgressiveCollapse__c</fullName>
    <formula>Text(NCMT_Project__r.Level_of_Protection__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Def Blast Resistance-ProgressiveCollapse</label>
    <type>Text</type>
</CustomField>