force-app/main/default/objects/Project_Level_Parameter__c/fields/Def_Vertical_Conveyance_Elevators_Stops__c.field-meta.xml
<CustomField>
    <fullName>Def_Vertical_Conveyance_Elevators_Stops__c</fullName>
    <formula>IF( Above_Ground__c = 1,0,MAX( (MCEILING(((Default_Vertical_Conveyance_Elevators__c/10000)* NCMT_Project__r.Total_GSF__c ))),2)* ( Above_Ground__c +   Below_Ground__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Def Vertical Conveyance Elevators Stops</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>