force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Above_Ground__c.field-meta.xml
<CustomField>
    <fullName>Default_Above_Ground__c</fullName>
    <description>Getting No of Floors from building height parameter lookup</description>
    <formula>IF( NCMT_Project__r.RecordType.Name &lt;&gt; &apos;Parking Garage&apos;,NCMT_Project__r.Building_Height_Parameter__r.No_of_Floors__c, NCMT_Project__r.At_and_above_grade__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Above Ground Each</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>