force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_AHU_Load__c.field-meta.xml
<CustomField>
    <fullName>Default_AHU_Load__c</fullName>
    <formula>ROUND(( NCMT_Project__r.Total_GSF__c *Default_Air_Handling_Capacity__c ),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default AHU Load</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>