force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Air_Handling_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Default_Air_Handling_Capacity__c</fullName>
    <description>Lookup Value from Building Parameters</description>
    <formula>NCMT_Project__r.Building_Height_Parameter__r.Air_Handling_Capacity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default HVAC Air Handling Capacity</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>