force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Atrium_Phantom_Floors__c.field-meta.xml
<CustomField>
    <fullName>Default_Atrium_Phantom_Floors__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Default Atrium Phantom Floors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>