force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Ballistic_Protection_to_windows__c.field-meta.xml
<CustomField>
    <fullName>Default_Ballistic_Protection_to_windows__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Default Ballistic Protection to windows</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>