force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Basement_SF__c.field-meta.xml
<CustomField>
    <fullName>Default_Basement_SF__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Default Basement SF</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>