force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Basement_Story_Height__c.field-meta.xml
<CustomField>
    <fullName>Default_Basement_Story_Height__c</fullName>
    <description>Lookup Value from Building Parameters</description>
    <formula>(NCMT_Project__r.Building_Height_Parameter__r.Story_Ht__c+ 3)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Basement Story Height</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>