force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Below_Ground__c.field-meta.xml
<CustomField>
    <fullName>Default_Below_Ground__c</fullName>
    <formula>IF( NCMT_Project__r.RecordType.Name &lt;&gt; &apos;Parking Garage&apos;, CEILING(NCMT_Project__r.Building_Height_Parameter__r.Bast_Ratio__c), NCMT_Project__r.Below_grade__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Below Ground Each</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>