force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_CCTV_System_CCTV_Allowance__c.field-meta.xml
<CustomField>
    <fullName>Default_CCTV_System_CCTV_Allowance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Default CCTV System - CCTV Allowance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>