force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Cladding_Quality__c.field-meta.xml
<CustomField>
    <fullName>Default_Cladding_Quality__c</fullName>
    <formula>NCMT_Project__r.Cladding_Quality__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Cladding Quality</label>
    <type>Text</type>
</CustomField>