force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Cooling_Load__c.field-meta.xml
<CustomField>
    <fullName>Default_Cooling_Load__c</fullName>
    <formula>ROUND(( NCMT_Project__r.Total_GSF__c * Default_HVAC_Cooling_Load__c),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Cooling Load</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>