force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Core_Shell_Partition_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Default_Core_Shell_Partition_Ratio__c</fullName>
    <formula>NCMT_Project__r.Building_Height_Parameter__r.CS_Ptn__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Core/Shell Partition Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>