force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Curtain_Wall_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Default_Curtain_Wall_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Default Curtain Wall Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>