force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Dead_Load__c.field-meta.xml
<CustomField>
    <fullName>Default_Dead_Load__c</fullName>
    <description>Lookup Value from Building Parameters</description>
    <formula>((NCMT_Project__r.Building_Height_Parameter__r.Dead_Load__c) *  IF( TEXT(Structural_Frame__c) = &quot;Concrete Frame Selection&quot;, 1.5, 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Dead Load</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>