force-app/main/default/objects/Project_Level_Parameter__c/fields/Default_Electrical_Load_Primary_kW__c.field-meta.xml
<CustomField>
    <fullName>Default_Electrical_Load_Primary_kW__c</fullName>
    <formula>ROUND(((Default_Electrical_Load__c/1000)* NCMT_Project__r.Total_GSF__c ),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Electrical Load - Primary kW</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>